<resources>
    <string name="app_name">FinalRecipeApp</string>
    <string name="txt_welcome">Welcome,</string>
    <string name="txt_sign_in_to_continue">Sign in to continue</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Log in</string>
    <string name="txt_get_started">Get Started</string>
    <string name="txt_create_to_continue">Create an account</string>
    <string name="txt_email">Email</string>
    <string name="txt_signin">Sign In</string>
    <string name="txt_forgotten_password">Forgotten <br>your password ?</br> </string>
    <string name="txt_enter_email">Enter your email address and we would <br>send you a link to reset your password.</br></string>
    <string name="txt_send_email">Send email</string>
    <string name="txt_check_your_e_mail">Check your e-mail</string>
    <string name="txt_we_have_send_your_reset_password">we have send your reset password <br>link on your resgisterd e-mail address</br></string>
    <string name="txt_forgot_password"><u>Forgot Password ?</u></string>
    <string name="txt_new_member">New member?</string>
    <string name="txt_sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_home">Home</string>
    <string name="txt_add">Add</string>
    <string name="txt_bookmark">Bookmark</string>
</resources>