<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/_16dp">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome"
        android:textSize="@dimen/_34sp"
        android:textColor="@color/tosca"
        android:layout_marginTop="@dimen/_60dp"
        android:fontFamily="@font/poppins_medium"/>

    <TextView
        android:id="@+id/tv_signin_to_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_in_to_continue"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"/>

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:hint="@string/txt_email"
        android:fontFamily="@font/poppins_medium"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="@dimen/_40dp"
        android:inputType="textPassword"
        android:maxLines="1"
        />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sp"
        android:text="@string/txt_forgot_password"
        android:gravity="end"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10dp"
        android:fontFamily="@font/poppins_light" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_50dp"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/_10dp"
        android:text="@string/txt_login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp" />

    <LinearLayout
        android:id="@+id/ll_new_member_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_member"
            android:textColor="@color/grey"
            android:textSize="@dimen/_18sp"/>
        <TextView
            android:layout_marginStart="@dimen/_3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"/>
    </LinearLayout>
</LinearLayout>