<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/_16dp">

    <TextView
        android:id="@+id/tv_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_get_started"
        android:textSize="@dimen/_34sp"
        android:textColor="@color/tosca"
        android:layout_marginTop="@dimen/_70dp"
        android:fontFamily="@font/poppins_medium"/>

    <TextView
        android:id="@+id/tv_create_to_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/txt_create_to_continue"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_username"
        android:layout_marginTop="@dimen/_70dp"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="@dimen/_15dp"
        android:paddingVertical="@dimen/_10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/hintcolor" />

    <TextView
        android:id="@+id/tv_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_email"
        android:layout_marginTop="@dimen/_50dp"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="@dimen/_15dp"
        android:paddingVertical="@dimen/_10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/hintcolor" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:layout_marginTop="@dimen/_50dp"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="@dimen/_15dp"
        android:paddingVertical="@dimen/_10dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/hintcolor"
        android:textSize="@dimen/_14sp" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:text="@string/txt_sign_up"
        android:padding="@dimen/_10dp"
        android:fontFamily="@font/poppins_medium"/>

    <LinearLayout
        android:id="@+id/ll_new_member_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_member"
            android:textColor="@color/grey"
            android:textSize="@dimen/_18sp"/>
        <TextView
            android:layout_marginStart="@dimen/_3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_signin"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"/>
    </LinearLayout>

</LinearLayout>